3rdParty/boost/1.66.0/libs/mp11/doc/mp11/set.adoc
////
Copyright 2017 Peter Dimov

Distributed under the Boost Software License, Version 1.0.

See accompanying file LICENSE_1_0.txt or copy at
http://www.boost.org/LICENSE_1_0.txt
////

[#set]
# Set Operations, <boost/mp11/set.hpp>
:toc:
:toc-title:
:idprefix:

A set is a list whose elements are unique.

## mp_is_set<S>

    template<class S> using mp_is_set = /*...*/;

`mp_is_set<S>` is `mp_true` if `S` is a set, `mp_false` otherwise.

## mp_set_contains<S, V>

    template<class S, class V> using mp_set_contains = /*...*/;

`mp_set_contains<S, V>` is `mp_true` if the type `V` is an element of the set `S`, `mp_false` otherwise.

## mp_set_push_back<S, T...>

    template<class S, class... T> using mp_set_push_back = /*...*/;

For each `T1` in `T...`, `mp_set_push_back<S, T...>` appends `T1` to the end of `S` if it's not already an element of `S`.

## mp_set_push_front<S, T...>

    template<class S, class... T> using mp_set_push_front = /*...*/;

`mp_set_push_front<S, T...>` inserts at the front of `S` those elements of `T...` for which `S` does not already contain the same type.
