3rdParty/boost/1.77.0/libs/mp11/doc/mp11/set.adoc
////
Copyright 2017 Peter Dimov

Distributed under the Boost Software License, Version 1.0.

See accompanying file LICENSE_1_0.txt or copy at
http://www.boost.org/LICENSE_1_0.txt
////

[#set]
# Set Operations, <boost/mp11/set.hpp>
:toc:
:toc-title:
:idprefix:

A set is a list whose elements are unique.

## mp_is_set<S>

    template<class S> using mp_is_set = /*...*/;

`mp_is_set<S>` is `mp_true` if `S` is a set, `mp_false` otherwise.

## mp_set_contains<S, V>

    template<class S, class V> using mp_set_contains = /*...*/;

`mp_set_contains<S, V>` is `mp_true` if the type `V` is an element of the set `S`, `mp_false` otherwise.

## mp_set_push_back<S, T...>

    template<class S, class... T> using mp_set_push_back = /*...*/;

For each `T1` in `T...`, `mp_set_push_back<S, T...>` appends `T1` to the end of the set `S` if it's not already an element of `S`.

## mp_set_push_front<S, T...>

    template<class S, class... T> using mp_set_push_front = /*...*/;

`mp_set_push_front<S, T...>` inserts at the front of the set `S` those elements of `T...` for which `S` does not already contain the same type.

## mp_set_union<L...>

    template<class... L> using mp_set_union = /*...*/;

`mp_set_union<S, L...>` is `mp_set_push_back<S, T...>`, where `T...` are the combined elements of the lists `L...`.
`mp_set_union<>` is `mp_list<>`.

## mp_set_intersection<S...>

    template<class... S> using mp_set_intersection = /*...*/;

`mp_set_intersection<S...>` returns a set that contains the elements that occur in all of the sets `S...`.
`mp_set_intersection<>` is `mp_list<>`.

## mp_set_difference<L, S...>

    template<class L, class... S> using mp_set_difference = /*...*/;

`mp_set_difference<L, S...>` removes the elements of the list `L` that appear in any of the sets `S...` and
returns the result.
